--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </div>
 <div><center><t>What are you feeling?</t></center></div>
 <div><center>
-    <form action ="file:///C:/Users/14437/Documents/BTM702/american.html">
+    <form action ="american.html">
         <input type="submit" value="American" />
     </form>
     <form action ="file:///C:/Users/14437/Documents/BTM702/italian.html">
