--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <form action ="american.html">
         <input type="submit" value="American" />
     </form>
-    <form action ="file:///C:/Users/14437/Documents/BTM702/italian.html">
+    <form action ="italian.html">
         <input type="submit" value="Italian" />
     </form>
-    <form action ="file:///C:/Users/14437/Documents/BTM702/chinese.html">
+    <form action ="chinese.html">
         <input type="submit" value="Chinese" />
     </form>
-    <form action ="file:///C:/Users/14437/Documents/BTM702/mexican.html">
+    <form action ="mexican.html">
         <input type="submit" value="Mexican" />
     </form>
-    <form action ="file:///C:/Users/14437/Documents/BTM702/seafood.html">
+    <form action ="seafood.html">
         <input type="submit" value="Seafood" />
     </form>
-    <form action ="file:///C:/Users/14437/Documents/BTM702/greek.html">
+    <form action ="greek.html">
         <input type="submit" value="Greek" />
     </form>
 </div></center>
