--- a/seafood.html
+++ b/seafood.html
@@ -30,7 +30,7 @@
             width="150" height="130"
         </a>
        </center>
-       <form action ="file:///C:/Users/14437/Documents/BTM702/index.html">
+       <form action ="index.html">
  
         <input type="submit" value="Go Back" />
     </form>
