--- a/mexican.html
+++ b/mexican.html
@@ -34,7 +34,7 @@
     width="140" height="120"
 </a>
 </center>
-       <form action ="file:///C:/Users/14437/Documents/BTM702/index.html">
+       <form action ="index.html">
  
         <input type="submit" value="Go Back" />
     </form>
