--- a/chinese.html
+++ b/chinese.html
@@ -29,6 +29,6 @@
 </a>
  
 </center>
-<form action ="file:///C:/Users/14437/Documents/BTM702/index.html">
+<form action ="index.html">
     <input type="submit" value="Go Back" />
 </form>
