--- a/greek.html
+++ b/greek.html
@@ -30,6 +30,6 @@
                 width="150" height="150"
             </a>
            </center>
-           <form action ="file:///C:/Users/14437/Documents/BTM702/index.html">
+           <form action ="index.html">
             <input type="submit" value="Go Back" />
         </form>
