--- a/italian.html
+++ b/italian.html
@@ -6,7 +6,7 @@
 <body style="background-color:rgb(245, 253, 207);">
     <center><img src="italianflag.png" alt="italian flag" style="width:20%"></center>
         <div>
-            <center><h1>Pizza, Pasta, and more!</h1></center>
+            <center><h1>Select what looks good and we will choose your next meal!</h1></center>
         </div>
       <center><a href="https://www.angelispizzeria.com/">
             <img alt="Pizza" src="pizza-png-transparent-23.png"
